<resources>
    <string name="app_name">Aptitude Test</string>

    <string name="true_button">True</string>
    <string name="false_button">False</string>
    <string name="initial_score">Score 0/10</string>


    <string name="play">Take Test</string>

    <string name="home">IQ Test!</string>
    <string name="instruction">Instruction</string>
    <string name="test">Take Test</string>
    <string name="exit">Exit</string>
    <string name="incorrect_toast">Wrong!</string>
    <string name="correct_toast">You got it!</string>
    <string name="welcome">Welcome !</string>
    <string name="instructionText"> Here are the instructions, you have ten questions to answer. Each question has one point. You can not go backt to the previous question, so take your time time and think through each question.</string>
    <string name="question_1">Pacific is the world\'s largest ocean</string>
    <string name="question_2">A slug\'s blood is green.</string>
    <string name="question_3">Approximately one quarter of human bones are in the feet.</string>
    <string name="question_4">The total surface area of two human lungs is approximately 70 square metres.</string>
    <string name="question_5">In West Virginia, USA, if you accidentally hit an animal with your car, you are free to take it home to eat.</string>
    <string name="question_6">In London, UK, if you happen to die in the House of Parliament, you are technically entitled to a state funeral, because the building is considered too sacred a place.</string>
    <string name="question_7">It is illegal to pee in the Ocean in Portugal.</string>
    <string name="question_8">Greenland is the world\'s biggest island. .</string>
    <string name="question_9">Google was originally called \"Backrub\".</string>
    <string name="question_10">Peter Jackson is the director of the Lord of the Rings trilogy. "</string>

</resources>
