<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/udacity">

    <TextView
        android:id="@+id/welcome_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="50dp"
        android:textColor="@color/colorTextHome"
        android:textSize="70sp"
        android:text="@string/home" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/welcome_text_view"
        android:padding="20dp"
        android:layout_marginTop="150dp">
        <Button
            android:id="@+id/instruction"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/my_button_bg"
            android:layout_marginBottom="20dp"
            android:textSize="50sp"
            android:text="@string/instruction"
            android:textColor="@color/colorText"/>
        <Button
            android:id="@+id/test"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/my_button_bg"
            android:layout_marginBottom="20dp"
            android:text="@string/test"
            android:textSize="50sp"
            android:textColor="@color/colorText"/>
        <Button
            android:id="@+id/exit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/my_button_bg"
            android:layout_marginBottom="20dp"
            android:text="@string/exit"
            android:textSize="50sp"
            android:textColor="@color/colorText"/>
    </LinearLayout>
</RelativeLayout>