<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@drawable/images">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/inst_view1"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:textSize="40sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/welcome"/>

        <TextView
            android:id="@+id/inst_view2"
            android:layout_below="@+id/inst_view1"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/instructionText"/>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_below="@+id/inst_view2"
    android:padding="20dp"
    android:layout_marginTop="40dp"
    >

    <Button
        android:id="@+id/play_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/play"
        android:layout_marginBottom="15dp"
        android:textColor="@color/colorText"
        android:textSize="30sp"
        android:background="@drawable/my_button_bg"
        />
    <Button
        android:id="@+id/exit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/inst_view"
        android:text="@string/exit"
        android:textSize="30sp"
        android:textColor="@color/colorText"
        android:background="@drawable/my_button_bg"
        />
</LinearLayout>

    </RelativeLayout>
</ScrollView>
